--- a/index.html
+++ b/index.html
@@ -418,6 +418,11 @@
             <li>Docker</li>
             <li>AWS</li>
           </ul>
+          <p>
+            In additional to the high-level skills listed above, I also have a
+            lot of experience using many popular web frameworks, libraries &
+            build tools.
+          </p>
         </section>
       </section>
       <section class="section profile">
@@ -444,144 +449,278 @@
           </ul>
         </div>
       </section>
-      <section class="section projects">
+      <section class="section projects list">
         <h2>Open-source Projects</h2>
-        <div class="content-block">
-          <p>
-            Whilst most of my best work is private & owned by the companies I've
-            worked for, I do occasionally find the time to work on personal
-            projects:
-          </p>
-          <ul>
-            <li>
+        <div class="content-container">
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a
+                  rel="nofollow"
+                  href="https://github.com/badsyntax/vscode-gradle"
+                  >vscode-gradle</a
+                >
+              </h3>
+            </header>
+            <p>
+              Tech used: Java, TypeScript, gRPC, Node.js, rollup, mocha, CI/CD
+              (GitHub Actions)
+            </p>
+            <p>
+              Run Gradle tasks in VS Code. This extension provides a visual
+              interface for your Gradle build. It supports whatever Gradle
+              supports and is language agnostic, but can work nicely alongside
+              other extensions like the Java language support extension.
+            </p>
+            <p>
+              See
               <a
+                href="https://github.com/badsyntax/vscode-gradle/blob/master/ARCHITECTURE.md"
                 rel="nofollow"
-                href="https://github.com/badsyntax/vscode-gradle"
-                >vscode-gradle</a
+                >ARCHITECTURE.md</a
               >
-              (Java, TypeScript, gRPC, Node.js)
-            </li>
-            <li>
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a
+                  href="https://github.com/badsyntax/vscode-spotless-gradle"
+                  rel="nofollow"
+                  >vscode-spotless-gradle</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: TypeScript, Node.js</p>
+            <p>
+              A VS Code extension to format your code using
+              <a href="https://github.com/diffplug/spotless" rel="nofollow"
+                >Spotless</a
+              >
+              (via Gradle).
+            </p>
+            <p>
+              See
               <a
+                href="https://github.com/badsyntax/vscode-spotless-gradle/blob/master/ARCHITECTURE.md"
                 rel="nofollow"
-                href="https://github.com/badsyntax/vscode-spotless-gradle"
-                >vscode-spotless-gradle</a
+                >ARCHITECTURE.md</a
               >
-              (TypeScript, Node.js)
-            </li>
-            <li>
-              <a
-                rel="nofollow"
-                href="https://github.com/badsyntax/hyperapp-starter-project"
-                >hyperapp-starter-project</a
-              >
-              (JavaScript)
-            </li>
-            <li>
-              <a rel="nofollow" href="https://github.com/badsyntax/gr-20"
-                >gr-20</a
-              >
-              (React)
-            </li>
-            <li>
-              <a rel="nofollow" href="https://github.com/badsyntax/react-seed"
-                >react-seed</a
-              >
-              (React)
-            </li>
-            <li>
-              <a rel="nofollow" href="https://github.com/badsyntax/map-route"
-                >map-route</a
-              >
-              (Knockout.js, PHP, MySQL)
-            </li>
-            <li>
-              <a rel="nofollow" href="https://github.com/badsyntax/SassBeautify"
-                >SassBeautify</a
-              >
-              (Python)
-            </li>
-            <li>
-              <a
-                rel="nofollow"
-                href="https://github.com/badsyntax/atom-sassbeautify"
-                >atom-sassbeautify</a
-              >
-              (JavaScript)
-            </li>
-            <li>
-              <a rel="nofollow" href="https://github.com/badsyntax/badsyntax.co"
-                >badsyntax.co</a
-              >
-              (Node.js)
-            </li>
-            <li>
-              <a rel="nofollow" href="https://github.com/badsyntax/xen">xen</a>
-              (Node.js)
-            </li>
-            <li>
-              <a rel="nofollow" href="https://github.com/badsyntax/staticx"
-                >staticx</a
-              >
-              (Node.js)
-            </li>
-            <li>
-              <a
-                rel="nofollow"
-                href="https://github.com/badsyntax/handlebars-form-helpers"
-                >handlebars-form-helpers</a
-              >
-              (JavaScript)
-            </li>
-            <li>
-              <a
-                rel="nofollow"
-                href="https://github.com/badsyntax/polymer-twitter"
-                >polymer-twitter</a
-              >
-              (Web components)
-            </li>
-            <li>
-              <a rel="nofollow" href="https://github.com/proxima-cms"
-                >proxima-cms</a
-              >
-              (PHP, MySQL)
-            </li>
-            <li>
-              <a
-                rel="nofollow"
-                href="https://github.com/badsyntax/jquery-spellchecker"
-                >jquery-spellchecker</a
-              >
-              (JavaScript)
-            </li>
-            <li>
-              <a rel="nofollow" href="https://github.com/badsyntax/mp3-arrange"
-                >mp3-arrange</a
-              >
-              (JavaScript)
-            </li>
-            <li>
-              <a rel="nofollow" href="https://github.com/badsyntax/itunes-utils"
-                >itunes-utils</a
-              >
-              (Shell, AppleScript)
-            </li>
-            <li>
-              <a rel="nofollow" href="https://github.com/openeyes/poc-frontend"
-                >openeyes/poc-frontend</a
-              >
-              (Angular)
-            </li>
-            <li>
-              <a
-                rel="nofollow"
-                href="https://github.com/badsyntax/express-project-boilerplate"
-                >express-project-boilerplate</a
-              >
-              (Node.js)
-            </li>
-          </ul>
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a
+                  href="https://github.com/badsyntax/hyperapp-starter-project"
+                  rel="nofollow"
+                  >hyperapp-starter-project</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: JavaScript, webpack</p>
+            <p>
+              An basic starter project to get started with hyperapp.
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a href="https://github.com/badsyntax/gr-20" rel="nofollow"
+                  >gr-20</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: JavaScript, React, OpenLayers</p>
+            <p>
+              Some useful info on the GR-20 hike in Corsica including an
+              interactive route viewer.
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a href="https://github.com/badsyntax/react-seed" rel="nofollow"
+                  >react-seed</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: JavaScript, React, Webpack</p>
+            <p>
+              In the days before create-react-app, bootstrapping a new React
+              project was a pain mainly due to the webpack configuration. This
+              project was built to alleviate the pain.
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a href="https://github.com/badsyntax/map-route" rel="nofollow"
+                  >map-route</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: JavaScript, Knockout.js, PHP (Kohana), MySQL</p>
+            <p>
+              An interactive route planner for travellers.
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a
+                  href="https://github.com/badsyntax/SassBeautify"
+                  rel="nofollow"
+                  >SassBeautify</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: Python</p>
+            <p>
+              A Sublime Text plugin that beautifies Sass files. It essentially
+              provides the ability to run the <code>sass-convert</code> utility
+              on your Sass code from within the editor.
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a
+                  href="https://github.com/badsyntax/badsyntax.co"
+                  rel="nofollow"
+                  >badsyntax.co</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: Node.js</p>
+            <p>
+              This was my personal website. Built on Express.js and uses flat
+              JSON files for page data.
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a href="https://github.com/badsyntax/xen" rel="nofollow"
+                  >xen</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: Node.js</p>
+            <p>
+              A site generator using some of the concepts from my badsyntax.co
+              site. The intent was to use grunt to manage the JSON content
+              files.
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a href="https://github.com/badsyntax/staticx" rel="nofollow"
+                  >staticx</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: Node.js</p>
+            <p>
+              Generate static websites from markdown files. It supports themes
+              with a MVVM architecture, giving the user complete control over
+              how their site is rendered. Feature incomplete but well tested.
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a
+                  href="https://github.com/badsyntax/handlebars-form-helpers"
+                  rel="nofollow"
+                  >handlebars-form-helpers</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: JavaScript</p>
+            <p>
+              Form helpers for handlebars. Well tested.
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a
+                  href="https://github.com/badsyntax/polymer-twitter"
+                  rel="nofollow"
+                  >polymer-twitter</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: Web components, Node.js</p>
+            <p>
+              A simple app to explore web components. It renders a twitter
+              stream using a custom Node.js API to pull data from twitter.
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a href="https://github.com/proxima-cms" rel="nofollow"
+                  >proxima-cms</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: PHP, MySQL, JavaScript</p>
+            <p>
+              A PHP CMS using the Kohana 3 framework, utilising concepts like
+              HMVC, themes and components.
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a
+                  href="https://github.com/badsyntax/jquery-spellchecker"
+                  rel="nofollow"
+                  >jquery-spellchecker</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: JavaScript</p>
+            <p>
+              A lightweight jQuery plugin that checks the spelling of text
+              within a form field or DOM tree
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a
+                  href="https://github.com/badsyntax/mp3-arrange"
+                  rel="nofollow"
+                  >mp3-arrange</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: Node.js</p>
+            <p>
+              A small and well-tested Node.js module that arranges/organises
+              your MP3 collection.
+            </p>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <h3>
+                <a
+                  href="https://github.com/badsyntax/itunes-utils"
+                  rel="nofollow"
+                  >itunes-utils</a
+                >
+              </h3>
+            </header>
+            <p>Tech used: Bash, AppleScript</p>
+            <p>
+              An old script I wrote to manage my itunes library, using Bash and
+              AppleScript.
+            </p>
+          </section>
         </div>
       </section>
       <section class="section profile">
