--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <header class="header main">
         <div class="title">
-          <h1><a href="/">Richard Willis</a></h1>
+          <h1><a href="https://richardwillis.info/">Richard Willis</a></h1>
           <p>Software Engineer</p>
         </div>
         <ul class="contact">
@@ -735,7 +735,7 @@
           </ul>
           <h3>Photos</h3>
           <ul>
-            <li><a rel="nofollow" href="/photos">View photos</a></li>
+            <li><a rel="nofollow" href="https://richardwillis.info/photos/">View photos</a></li>
           </ul>
           <h3>Hobbies</h3>
           <ul>
