--- a/index.html
+++ b/index.html
@@ -419,8 +419,8 @@
             <li>AWS</li>
           </ul>
           <p>
-            In additional to the high-level skills listed above, I also have a
-            lot of experience using many popular web frameworks, libraries &
+            In addition to the high-level skills listed above, I have a
+            lot of experience with many popular web frameworks, libraries &
             build tools.
           </p>
         </section>
