Add new experience

--- a/index.html
+++ b/index.html
@@ -55,6 +55,31 @@
                 </h3>
               </div>
               <p class="date">
+                March 2020 &ndash; Current
+              </p>
+            </header>
+            <p class="company">
+              <a rel="nofollow" href="https://www.skyscanner.net/"
+                >Skyscanner</a
+              >
+              - United Kingdom
+            </p>
+            <p>
+              Full-stack development of the main flights results section of the product, as well as developer enablement.
+            </p>
+            <ul>
+              <li>Add new features to a large React/Redux/Node.js codebase</li>
+              <li>Selected to be part of a new team to focus on web enablement to provide low level tooling and libraries to other web teams.</li>
+            </ul>
+          </section>
+          <section class="content-block">
+            <header class="header">
+              <div class="overview">
+                <h3 class="title">
+                  Senior Software Engineer
+                </h3>
+              </div>
+              <p class="date">
                 Aug 2019 &ndash; Current
               </p>
             </header>
