--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </p>
             <ul>
               <li>Add new features to a large React/Redux/Node.js codebase</li>
-              <li>Selected to be part of a new team to focus on web enablement to provide low level tooling and libraries to other web teams.</li>
+              <li>Selected to be part of a new team to focus on web enablement to provide low level tooling and libraries to other web teams</li>
             </ul>
           </section>
           <section class="content-block">
