--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </h3>
               </div>
               <p class="date">
-                Aug 2019 &ndash; Current
+                Aug 2019 &ndash; Feb 2020
               </p>
             </header>
             <p class="company">
