--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
           7954216809
         </p>
         <p>
-          Last Updated: 30th June 2020
+          Last Updated: 27<sup>th</sup> October 2020
         </p>
       </footer>
     </div>
